# hakyll

./: .gitignore  cabal.project  devenv.nix  flake.nix  session.yaml
.github/workflows/: build-site.yml
code/: .gitignore  flake.nix
code/mysite/: mysite.cabal
code/mysite/posts/: 2015-10-07-rosa-rosa-rosam.markdown
doc/: .envrc-old  00-main.tex  default.nix  devenv.nix  flake.nix  indentconfig.yaml  preamble.tex
doc/src/: 00-main.tex  glossary.tex  preamble.tex
mysite01/: mysite.cabal  site.hs
mysite01/deck/: archive.html  index.html
mysite01/deck/posts/: 2015-10-14-debugging-a-debugger.html
notes/: default.html  index.md  mysite02.cabal  roam-export  roam.cabal  site.hs
notes/exe/: site.hs
notes/templates/: post-list.html  template.html
