cabal-version: 3.0
name:          mysite02
version:       0.1.0.0
license:       MIT
build-type:    Simple

common warnings
  ghc-options:        -Wall
  default-extensions: OverloadedStrings

executable site
  import:           warnings
  main-is:          site.hs
  build-depends:
    , base          ^>=4.18.2.1
    , hakyll
    , pandoc
    , pandoc-types
    , text

  hs-source-dirs:   .
  default-language: Haskell2010
