cabal-version: 3.0
name:          roam
version:       0.1.0.0
license:       MIT
build-type:    Simple

common warnings
  ghc-options:        -Wall
  default-extensions:
    LambdaCase
    OverloadedStrings

library
  import:           warnings
  exposed-modules:
    Doc
    Parser

  build-depends:
    , base          ^>=4.18.2.1
    , containers
    , hakyll
    , mtl
    , pandoc
    , pandoc-types
    , text

  hs-source-dirs:   lib
  default-language: Haskell2010

executable parse
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base          ^>=4.18.2.1
    , containers
    , hakyll
    , pandoc
    , pandoc-types
    , roam
    , text

  hs-source-dirs:   exe
  default-language: Haskell2010

executable site
  import:           warnings
  main-is:          site.hs
  build-depends:
    , base          ^>=4.18.2.1
    , hakyll
    , pandoc
    , pandoc-types
    , text

  hs-source-dirs:   exe
  default-language: Haskell2010
